переместил index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Сайт"Седона"</title>
+</head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="info.html">Информация</a> </a></li>
+                <li><a href="fotovideo.html">Фото и видео</a></li>
+                <li><a href="map.html">Карта штата</a></li>
+                <li><a href="hotels.html">Гостиницы</a></li>
+            </ul>
+            <figure>
+                <a href="#">
+                    <img src="imglogo/fromnav.jpg" width="200" height="200" alt="Логотипгорода"> 
+                </a>
+            </figure>
+        </nav>
+    </header>
+    <main>
+        <h1>Сайт города Седона</h1>
+        <!--Здесь будет логотип, верхняя асть главной страницы, надо подумать-->
 
-  </body>
+        <section>
+            <h2>Преимущества</h2>
+            <ul>
+                <li>
+                    <h3>№1</h3>
+                    <p>Настоящий<br> 
+                        городок<br>
+                    <span>- №1 -</span><br>
+                    Седона — не аттракцион для туристов,<br>
+                    там течёт своя жизнь
+                </p>
+                </li>
+                <li>
+                    <h3>№2</h3>
+                    <p>Там есть<br> 
+                        Мост дьявола<br>
+                    <span>- №2 -</span><br>
+                    Да, по нему можно пройти! Если конечно<br>
+                    вы осмелитесь
+                    </p>
+                </li>
+                <li>
+                    <h3>№3</h3>
+                    <p>Небольшая<br>
+                        Площадь<br>
+                        <span>- №3 -</span><br>
+                        Все достопримеательности<br>
+                        Находятся очень близко<br>
+                    </p>
+                </li>
+                <li>
+                    <h3>№4</h3>
+                    <p>Красивая<br>
+                        Дорога<br>
+                        <span>- №4 -</span><br>
+                        Ехать в Седону из Лас-Вегаса совсем<br>
+                        не скучно!
+                    </p>
+                </li>
+                <li>
+                    <h3>№5</h3>
+                    <p>Мало<br>
+                        Туристов<br>
+                        <span>-№5 -</span><br>
+                        Большинство едет в гранд каньон<br>
+                        и толпится там
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Советы туристам</h2>
+            <div>
+                <ul>
+                    <li>
+                        <h3>Жильё</h3>
+                            <figure>
+                                <a href="#"><img src="icon1/home.jpg" width="200" height="200" alt="Жильё"></a>
+                            </figure>
+                            <p>Жилье</p>
+                            <p>Рекомендуем пожить в настоящем<br>
+                                мотеле, как в кино!
+                            </p>
+                    </li>
+                    <li>
+                        <h3>Еда</h3>
+                        <figure>
+                            <a href="#"><img src="icon2/food.jpg" width="200" height="200" alt="Еда"></a>
+                        </figure>
+                        <p>Еда</p>
+                        <p>Всегда заказывайте фирменный бурегер,<br>
+                            вы не разоаруетесь!
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Сувениры</h3>
+                        <figure>
+                            <a href="#"><img src="icon3/souvenirs" width="200" height="200" alt="Сувениры"></a>
+                        </figure>
+                        <p>Сувениры</p>
+                        <p>Не только китайского, но и местного<br>
+                            производства!
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <h2>Бронь</h2>
+            <p>Заинтересовались?</p>
+            <p>Укажите предполагаемые даты поездки,<br>
+                и мы покажем вам лучшие предложения гостиниц в Седоне
+            </p>
+            <!--Здесь будет форма-->
+            <!--Здесь будет карта-->
+        </section>
+    </main>
+    <footer>
+        <p>#Visitsedona<br>
+            тел: +7(495) 666-02-66
+        </p>
+        <div>
+            <ul>
+                <li><a href="#">Твиттер</a></li>
+                <li><a href="#">Фэйсбук</a></li>
+                <li><a href="#">Ютуб</a></li>
+            </ul>
+        </div>
+        <p>Website by
+            <a href="#"><img src="icon4/logoHTMLacademy.jpg" width="200" height="200" alt="Логотип разработчика"></a>
+        </p>
+    </footer>
+
+</body>
+
 </html>
